--- a/styles/coding.module.css
+++ b/styles/coding.module.css
@@ -29,3 +29,11 @@
     color:black;
     text-decoration: none;
 }
+
+@media screen and (max-width: 992px) {
+      .row_main{
+        display:flex;
+        flex-direction: column;
+        width:100%;
+    }
+}
