--- a/styles/coding.module.css
+++ b/styles/coding.module.css
@@ -32,11 +32,14 @@
 
 @media screen and (max-width: 477px) {
     .intro{
-        font-size: 0.6em;
+        font-size: 0.8em;
     }
     .cardHead{
         align-self: center;
         font-size:1em;
 
+    }
+    .listItems{
+        font-size: 0.8em
     }
 }
